# learn-cmake

./: .yamllint.yaml  CMakeLists.txt  README.md  README.ru.md  clean-build.bat  clean-build.sh  run-build-test.bat  run-build-test.sh
.github/workflows/: cleanup_push.yml  learn_cmake.yml
asm/: CMakeLists.txt  case_asm.c  foo-_att-arm64.s  foo-_att-x64.s  foo-att-x64.s  foo-elbrus.s  foo-masm64.asm  foo-nasm32.asm  foo-template.c.in  foo.h
dynamic/: CMakeLists.txt  baz.c  boo.c  dfoo.h  dynamic.c  noe.c
dynamic-def-file/: CMakeLists.txt  baz.c
dynamic-export-all/: CMakeLists.txt  afoo.h  baz.c  boo.c  case_dynamic.c  noe.c
dynamic-generate-export/: CMakeLists.txt  baz.c  boo.c  case_dynamic.c  gfoo.h  noe.c
dynamic-version-def/: CMakeLists.txt  boo.c  case_dynamic.c  dfoo.def  dfoo.exports  dfoo.h  dfoo.vers  noe.c
hello/: CMakeLists.txt  bsd_echo.c  hello++.cpp  hello.c  simple_false.c
static/: CMakeLists.txt  baz.c  boo.c  case_static.c  foo.h  static.c
win32gui/: CMakeLists.txt  main.c  main.h  main.rc  occ_workarond.c
workarounds/: LCC.cmake  OrangeC.cmake  TinyCC.cmake  _patches_.cmake  detect.cmake  install.cmake  uninstall.cmake
workarounds/Modules/Compiler/: TinyCC.cmake
